[gd_scene load_steps=2 format=3 uid="uid://8lxypxspmupc"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_31gw2"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_31gw2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -68.0
offset_right = 60.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="button_controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="button_sounds" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sounds"

[node name="button_video" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Video"

[node name="button_back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/button_controls" to="." method="_on_button_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/button_sounds" to="." method="_on_button_sounds_pressed"]
[connection signal="pressed" from="VBoxContainer/button_video" to="." method="_on_button_video_pressed"]
[connection signal="pressed" from="VBoxContainer/button_back" to="." method="_on_button_back_pressed"]
